[tool.poetry]
name = "rt-estimator"
version = "0.1.0"
description = ""
authors = ["DanHugoDanHugo <dhugo@reallycool.com>"]
readme = "README.md"
packages = [{include = "rt_estimator"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
